fixed cards alignment

--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ a {
     height: 1.5;
     font-weight: lighter;
     color: slategray;
+    text-align: center;
 }
 .services ul {
     font-family: Helvetica;
@@ -128,12 +129,17 @@ img {
     margin-left: auto;
     margin-right: auto;
 }
+.cardbox {
+    display: flex;
+    justify-content: center;
+}
 .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 30%;
     border-radius: 5px;
     display: inline-block;
+    align-content: center;
     justify-content: center;
 } 
 .card:hover {
